Apply 5_5_profiles_connection_pool.patch